--- a/index.html
+++ b/index.html
@@ -3,29 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./styles.css">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   </head>
+
   <body>
-    <header class="bg-indigo-700 border-4 border-orange-300 space-y-6">
+    
+    <header class="bg-indigo-700 parentContainer space-y-6">
       <h1 class="text-white p-3 font-bold text-3xl flex justify-center">
         Weather Dashboard
       </h1>
     </header>
 
-    <section id="leftHandColumn" class="border-4 border-orange-300 my-3">
+    <main class="main gridContainer">
 
-      <div id="card" class="border-red-400 border-2">
-        <h2 class="font-bold">Search By City</h2>
+    <section id="leftHandColumn" class="parentContainer flex flex-col">
 
-        <form id="user-form">
+      <div id="cityCard" class="contentCard">
+        <h2 class="heading">Search By City</h2>
+
+        <form class="p-2" id="user-form">
           <label for="city">City:</label>
-          <input class="w-full bg-drabya-gray border-gray-500 appearance-none border p-4 font-light leading-tight focus:outline-none focus:shadow-outline" name="cityInput" id="cityInputId" type="text">
-          <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Get Weather</button>
+          <input class="inputBox focus:outline-none focus:shadow-outline" name="cityInput" id="cityInputId" type="text" placeholder="San Diego">
+          <button type="submit" class="isBtn bg-blue-500 hover:bg-blue-700 rounded-full">Get Weather</button>
         </form>
+      </div>
+
+      <div id="pastSearchCard" class="contentCard flex flex-col">
+        <h2 class="heading">Past Searches</h2>
+
+        <button type="submit" class="isBtn hover:bg-blue-500 rounded-full">Houston</button>
+        <button type="submit" class="isBtn hover:bg-blue-500 rounded-full">Dallas</button>
+        <button type="submit" class="isBtn  hover:bg-blue-500 rounded-full">Austin</button>
       </div>
 
     </section>
 
-    <main id="rightHandColumn"></main>
+    <section id="rightHandColumn" class="parentContainer grid grid-cols-1">
+
+        <div class="contentCard ">
+          <h1>Atlanta 2021-03-14</h1>
+          <p>Temp: 12 Celcius</p>
+          <p>Wind: 5km/hr</p>
+          <p>Humidity: 50%</p>
+          <p>UV index: 0.4</p>
+        </div>
+
+        <div class="contentCard">
+          <h1>5 Day Forecast</h1>
+        </div>
+
+    </section>
+
+ 
+  </main>
+
   </body>
 </html>
