competed the temp humidity and pressure parameter

--- a/index.html
+++ b/index.html
@@ -71,13 +71,21 @@
             <p id="current-temp"></p>
           </span>
 
-          <div>
-            <p id="current-wind-speed">Wind: </p>
-          </div>
+          <span class="horizontal">
+            <p>Wind:</p>
+            <p id="current-wind-speed"></p>
+          </span>
 
-          <p id="current-humidity">Humidity:</p>
+          <span class="horizontal">
+            <p>Humidity:</p>
+            <p id="current-humidity"></p>
+          </span>
 
-          <p id="current-uv">UV index: </p>
+          <span class="horizontal">
+            <p>UV index:</p>
+            <p id="current-uv"></p>
+          </span>
+
         </div>
 
         <div class="contentCard">
