created the getUV func and adding some comments describing its functionality

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
         </div>
 
-        <div class="contentCard">
-          <h1>5 Day Forecast</h1>
+        <div class="contentCard" id="5-day-forecast">
         </div>
       </section>
     </main>
