creating a test function and adding some test styles

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
 
       var currentTimeEl = document.getElementById("current-time");
 
+
       currentTimeEl.textContent = m.format("L");
+
+      testFunc();
+      
     </script>
   </body>
 </html>
