created third fetch

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
       currentTimeEl.textContent = m.format("L");
 
       testFunc();
+
+      // I will make the time function here
       
     </script>
   </body>
